
namespace Entities.DTOs;

public record BookDtoForInsertion:BookDtoBase
{
    
}
