
namespace Entities.DTOs;

public record BookDtoForUpdate : BookDtoBase
{
    
}