namespace Entities.DTOs;

public record CategoryDtoForInsertion : CategoryDtoBase
{

}