namespace Entities.DTOs;

public record CategoryDtoForUpdate : CategoryDtoBase
{

}
